[FIX] html_builder: correct options layout issues
This commit fixes several options-related issues in the HTML Builder:
- Fixed the height of the font-family picker and the “None” shadow
option; the issue was caused by the font metrics.
- Improved the vertical sublevel line, which appeared blurry due to
the transform property and an incorrect height.
- Harmonized the padding of the visibility layout options and
the background image position to align with the other pickers.

task-4985348

closes odoo/odoo#229806

X-original-commit: ee6717c8480d68901dc93e281a408ee9e1949062

--- a/addons/html_builder/static/src/core/building_blocks/select_many2x.scss
+++ b/addons/html_builder/static/src/core/building_blocks/select_many2x.scss
@@ -20,6 +20,7 @@
     .o_select_menu_toggler {
         &, &.btn-light.bg-light {
             --border-color: #{$o-we-bg-light};
+            --btn-padding-x: #{map-get($spacers , 2)};
 
             @include button-variant(
                 $background: $o-we-item-clickable-bg,
